# gpxbridge

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini  strava-export.py
src/: __init__.py  cli.py  main.py
src/common/: __init__.py  gpx.py  models.py  utils.py
src/strava/: __init__.py  cli.py  client.py  exporter.py  gpx_converter.py  models.py  oauth.py
src/strava/templates/: oauth_error.html  oauth_success.html
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  test_data.py
tests/test_common/: __init__.py  test_gpx.py  test_models.py  test_utils.py
tests/test_strava/: __init__.py  test_client.py  test_models.py
