[project]
name = "gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "gpxpy>=1.6.2",
    "requests>=2.32.4",
    "ruff>=0.12.4",
    "pre-commit>=4.0.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "arrow>=1.3.0",
    "loguru>=0.7.2",
    "python-slugify>=8.0.4",
    "tenacity>=9.0.0",
]
