[project]
name = "gpxbridge"
version = "0.1.0"
description = "GPX data bridge tool - export/import GPS tracks between services like Strava, Gaia GPS, etc."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "gpxpy>=1.6.2",
    "requests>=2.32.4",
    "ruff>=0.12.4",
    "pre-commit>=4.0.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "arrow>=1.3.0",
    "loguru>=0.7.2",
    "python-slugify>=8.0.4",
    "tenacity>=9.0.0",
]

[project.scripts]
gpxbridge = "src.cli:cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "hypothesis>=6.136.1",
    "freezegun>=1.5.3",
    "pytest-mock>=3.14.1",
    "types-requests>=2.32.4.20250913",
]
